--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,52 @@
-<h1>Sign into Pax Nationatica</h1>
+<div class='container'>
+  <h1>Welcome To Pax Nationatica</h1>
+  <div class='row'>
+
+    <div class='col-md-3'>
+      <h3>Register</h3>
+      <form action="/register" method="post">
+        <input type='hidden' name="authenticity_token" value="<%= form_authenticity_token %>">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" class="form-control" id="name" name="user[name]">
+        </div>
+        <div class="form-group">
+          <label for="email">Email address:</label>
+          <input type="email" class="form-control" id="email" name="user[email]">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd" name="user[password]">
+        </div>
+        <div class="form-group">
+          <label for="password_confirmation">Password Confirmation:</label>
+          <input type="password" class="form-control" id="pwd" name="user[password_confirmation]">
+        </div>
+
+        <button type="submit" class="btn btn-default">Register</button>
+      </form>
+    </div>
+
+    <div class='col-md-3'>
+      <h3>Log In</h3>
+      <form action="/login" method='post'>
+        <input type='hidden' name="authenticity_token" value="<%= form_authenticity_token %>">
+        <div class="form-group">
+          <label for="email">Email address:</label>
+          <input type="email" class="form-control" id="email" name="email">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd" name="password">
+        </div>
+
+        <button type="submit" class="btn btn-default">Log In</button>
+      </form>
+    </div>
+</div>
+
+
+<!-- <h1>Sign into Pax Nationatica</h1>
 <br>
 <form action="/login" method="post">
 	<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"
@@ -7,4 +55,4 @@
 		<input type="text" name="username" id="username">
 	</h3>
 	<input type="submit" value="Sign In">
-</form>
+</form> -->
