--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,18 +1,26 @@
+<head>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <!-- <link rel="stylesheet" type="text/css" href="application.css"> -->
+</head>
 <html>
    <div>
         <h1 class="title">PAX NATIONATICA</h1>
         <h3 class="historic">Nations Rising and Falling Every Day</h3>
         <br>
-        <ul class="sub">
-            <li>Bhutan</li>
-            <li>Italy</li>
-            <li>Peru</li>
-            <li>Phillipines</li>
-            <li>Sudan</li>
-            <li>The United States</li>
-        </ul>
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select A Nation
+          <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li><a href="/bhutan">Bhutan</a></li>
+                <li><a href="/italy">Italy</a></li>
+                <li><a href="/peru">Peru</a></li>
+                <li><a href="/phillipines">Phillipines</a></li>
+                <li><a href="/sudan">Sudan</a></li>
+                <li><a href="/usa">The United States</a></li>
+            </ul>
+        </div>
         <br>
-        <h3 class="main">Welcome: <strong><%= @user.username %></strong></h3>
+        <h3 class="main">Welcome: <strong><%= @user.email %></strong></h3>
         <form action="/messages" method="post">
         	<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
         	<textarea name="message[message]" class="message" cols="65" rows="3"></textarea>
@@ -22,7 +30,7 @@
 
         <% @messages.each do |message| %>
             <hr>
-            <h4 class="main"><%= "#{message.user.username} - #{message.created_at.strftime("%B #{message.created_at.day.ordinalize}, %Y")}" %></h4>
+            <h4 class="main"><%= "#{message.user.email} - #{message.created_at.strftime("%B #{message.created_at.day.ordinalize}, %Y")}" %></h4>
         	<p class="sub"><%= message.message %></p>
         <% end %>
    </div>
