--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,13 +6,17 @@
       <h3>Register</h3>
       <form action="/register" method="post">
         <input type='hidden' name="authenticity_token" value="<%= form_authenticity_token %>">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" class="form-control" id="name" name="user[name]">
-        </div>
+        </div> -->
         <div class="form-group">
           <label for="email">Email address:</label>
           <input type="email" class="form-control" id="email" name="user[email]">
+        </div>
+        <div class="form-group">
+          <label for="nation">What's your favorite nation:</label>
+          <input type="nation" class="form-control" id="favorite" name="user[nation]">
         </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
