--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,13 @@
+<html>
+<head>
+	<title>Pax Nationatica Login/Registration</title>
+	<style>
+		body {
+		}
+	</style>
+</head>
+
+<body>
 <div class='container'>
   <h1 class="title">Welcome To Pax Nationatica</h1>
   <p></p>
@@ -10,7 +20,7 @@
   <!-- <a><img src='https://media.giphy.com/media/xT9DPofNeoS0B0Nk7C/giphy.gif' onmouseover="somefunction();"></a> -->
 
  <img class="centered-gif" src='https://media.giphy.com/media/xT9DPofNeoS0B0Nk7C/giphy.gif' title="Those Parthians could teach the Germans a thing or two about fighting two-front wars" allowFullScreen></img>
- <br> 
+ <br>
  <p class="label" >via GIPHY</p>
  <div class='row'>
 
@@ -60,15 +70,5 @@
       </form>
     </div>
 </div>
-
-
-<!-- <h1>Sign into Pax Nationatica</h1>
-<br>
-<form action="/login" method="post">
-	<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"
-	<h3>
-		<label>Username:</label>
-		<input type="text" name="username" id="username">
-	</h3>
-	<input type="submit" value="Sign In">
-</form> -->
+</body>
+</html>
