--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,8 @@ html {
 
 body{
     padding-top: 15px;
-    padding-left: 15px;
+    padding-left: 20px;
+    padding-right: 75px;
     background-image: url('/assets/pax_map2.jpeg');
 }
 
@@ -33,6 +34,20 @@ body{
     font-family: "Georgia","Helvetica";
     font-size: 16px;
     color: #5a380c;
+}
+
+.roundcorners {
+    border-radius: 25px;
+    background-color: #c2d2ca;
+    border-style: double;
+    border-width: thick;
+    padding: 8px;
+    margin-right: auto;
+    /*background-position: left top;
+    background-repeat: repeat;
+    padding: 20px;
+    width: 200px;
+    height: 150px;*/
 }
 
 .main {
@@ -55,9 +70,9 @@ body{
 
 .centered-gif {
     margin: auto;
-    width: 50%;
-    border: 3px solid green;
-    padding: 10px;
+    width: 65%;
+    border: 1.5px solid brown;
+    padding: 2.5px;
 }
 
 .label {
