--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,8 +6,12 @@
    <div class="roundcorners">
         <h1 class="title">PAX NATIONATICA</h1>
         <h3 class="historic">Nations Rising and Falling Every Day</h3>
-        <h3 class="main">About</h3>
-        <h4>Golden ages. Every region of the world, and virtually every nation of people has experienced one or more.
+        <h3 class="main">Pax</h3>
+        <h4>Pax is latin for Peace, but it can be roughly translated as a different term: hegemony. In other words a type of golden age.
+            Nationatica refers to a Nation, a group of people who see themselves as a cohesive and coherent unit.
+        </h4>
+        <h4>
+            Virtually every nation of people has experienced at least one Pax in it's history.
             A country that might be considered a "failed state" today most likely has a long and rich history of building expansive empires and
             glorious contributions to world art and culture. And just as likely that golden age ended to signal the rise of a new power, thus
             causing the cycle to start anew. It is good sometimes, to look to the past to see that all power is fleeting, and that the backwaters
@@ -15,7 +19,7 @@
         </h4>
         <br>
         <h4>Select a Region and/or a Time Period</h4>
-        <form action="/search" method="post">
+        <form action="/display" method="post">
             <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
             <select name="continent_search">
                 <%= @nations.each do |nation| %>
@@ -32,10 +36,9 @@
         <br>
         <h4>OR search from the current master list of nations....</h4>
         <% @nations.each do |nation| %>
-            <!-- <h4 class="nations"><%= nation.nation_name %></h4> -->
-            <!-- <p><%= nation.empire %></p> -->
             <h4><li><a href="/<%= nation.nation_name %>"><%= nation.nation_name %></a></li></h4>
         <% end %>
+
         <br>
         <br>
         <!-- <ul>
@@ -65,7 +68,8 @@
         <% end %>
    </div>
    <br>
-   <form action="/logout" method="post">
+   <form action="/logout" method="delete">
+       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
        <button type="submit" class="btn btn-default">Log Out</button>
    </form>
    <br>
