--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -18,7 +18,7 @@
             of one year have been, and might become again, the 800 pound gorilla of another.
         </h4>
         <br>
-        <h4>Select a Region and/or a Time Period</h4>
+        <h4>Select a Region and/or a Time Period. New nations will be added periodically.</h4>
         <form action="/display" method="post">
             <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
             <select name="continent_search">
