--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,7 +24,7 @@
  <br>
 
  <div class='roundcorners' style="width:65%;">
-    <h4 style="display:block; "> Please Login or Register to Enter</h4>
+    <h4 style="display:block; "> Please Login or Register to enter</h4>
     <div class='loginreg'>
       <h3 class="main">Register</h3>
       <form class="loginreg_entry" action="/register" method="post">
@@ -70,6 +70,13 @@
         <button type="submit" class="btn btn-default">Log In</button>
       </form>
     </div>
+ </div>
+ <div class="bottom_bar">
+   <p>
+     <br>
+   </p>
+
+ </div>
 </div>
 </body>
 </html>
