--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,12 +8,18 @@
 </head>
 
 <body>
+  <div class="nav_bar">
+    <p>
+      <br>
+    </p>
+
+  </div>
 <div class='container'>
   <h1 class="title">Welcome To Pax Nationatica</h1>
   <p></p>
   <h3 class="main">What is Pax Nationatica?</h3>
   <h4> Want to know when a nation was at it's apex, it's golden age, it's time of glory? Well don't slog through Wikipedia,
-      like a tragic fool, just look it up here and glory in the cyclic nature of world history. Because who knows when <i>your</i>
+      like a tragic fool, just look it up here and marvel at the ebb and flow of world history. Because who knows when <i>your</i>
       nation is due for a rise or fall...
   </h4>
 
@@ -71,12 +77,7 @@
       </form>
     </div>
  </div>
- <div class="bottom_bar">
-   <p>
-     <br>
-   </p>
 
- </div>
 </div>
 </body>
 </html>
