--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,6 +77,7 @@ body{
 
 .container {
     width:100%;
+    padding-top: 25px;
     padding-bottom: 100px;
 }
 
@@ -97,12 +98,15 @@ body{
 
 }
 
-.bottom_bar {
+.nav_bar {
     display: inline;
-    background-color: crimson;
+    border-style: solid;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    background-color: blanchedalmond;
     position: fixed;
     z-index: 100;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
 }
