--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,24 +7,23 @@
         <h1 class="title">PAX NATIONATICA</h1>
         <h3 class="historic">Nations Rising and Falling Every Day</h3>
         <h3 class="main">Pax</h3>
-        <h4><strong>Pax</strong> is latin for Peace, but often times you'll see it used to describe a different term: hegemony.
-          <br>
-          <br>
-            <strong>Nationatica</strong> is bastardized latin to mean Nation, a group of people who see themselves as a cohesive and coherent unit.
-        </h4>
-        <h4>
+        <h4><strong>Pax</strong> is latin for Peace, but often times you'll see it used to describe a different term: hegemony.</h4>
+        <h4><strong>Nationatica</strong> is bastardized latin to mean Nation, a group of people who see themselves as a cohesive and coherent unit.</h4>
+        <h4>But what's the twist? Well a lot of things can be considered a "nation". So why limit ourselves.</h4>
+        <!-- <h4>
             Virtually every nation of people on eath has seen at least one Pax in it's history.
             A country considered a failed state today probably has at least one period of regional dominance with many
             significant contributions to world art and culture. And just as likely, that golden age ended to signal the rise of a new power, thus the
             cycle starting anew. It is good sometimes, to look to the past to see that what we consider world power is fleeting, and that the backwaters
             of one year have been, and might again become, the 800 pound gorilla of another.
-        </h4>
+        </h4> -->
         <br>
         <h4>Select a Region and/or a Time Period. Check back for periodic updates with new nations.</h4>
-        <form action="/display" method="post">
+        <form action="/dropdown_search" method="get">
             <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
             <select name="continent_search">
                 <%= @nations.select("DISTINCT(continent)").each do |c| %>
+                    <!-- <option value="<%= c %>"> --- </option> -->
                     <option value="<%= c.continent %>"><%= c.continent %></option>
                 <% end %>
             </select>
