New dates and ica nation model fields. New found nations template

--- a/app/views/nations/dropdown_search.html.erb
+++ b/app/views/nations/dropdown_search.html.erb
@@ -1,5 +1,4 @@
-<h2><u>Search Results</u></h2>
-
+<h2 class="title"><u>Search Results</u></h2>
 
 <% @nations_found.each do |nation| %>
     <h4><li><a href="/<%= nation.nation_name %>"><%= nation.nation_name %></a></li></h4>
