--- a/app/views/nations/show_nation.html.erb
+++ b/app/views/nations/show_nation.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @selected_nation.empire %> - <strong>Pax <%= @selected_nation.ica %></strong></h1>
+<h1 class="title"><%= @selected_nation.empire %>: <strong>Pax <%= @selected_nation.ica %></strong></h1>
 <h4><%= link_to 'Back to Nation Page', :back %></h4>
 <br>
 <h3 style="color:#7C2E00;"><u><strong>Summary</strong></u></h3>
