Fixed single record bug in dropdown menu nation search. Changed nation content

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -8,7 +8,7 @@
         <h3 class="historic">Nations Rising and Falling Every Day</h3>
         <h3 class="main">Pax</h3>
         <h4><strong>Pax</strong> is latin for Peace, but often times you'll see it used to describe a different term: hegemony.</h4>
-        <h4><strong>Nationatica</strong> is bastardized latin to mean Nation, a group of people who see themselves as a cohesive and coherent unit.</h4>
+        <h4><strong>Nationatica</strong> is bastardized latin to mean <strong>nation</strong>, i.e a group of people who see themselves as a cohesive and coherent unit.</h4>
         <h4>But what's the twist? Well a lot of things can be considered a "nation". So why limit ourselves.</h4>
         <!-- <h4>
             Virtually every nation of people on eath has seen at least one Pax in it's history.
