--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,7 @@ body{
 }
 
 .roundcorners {
-    border-radius: 25px;
+    border-radius: 10px;
     background-color: #c2d2ca;
     border-style: double;
     border-width: thick;
@@ -98,7 +98,7 @@ body{
 
 }
 
-.nav_bar {
+/*.nav_bar {
     display: inline;
     border-style: solid;
     border-radius: 10px;
@@ -109,7 +109,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-}
+}*/
 
 @font-face {
     font-family:"Leander";
