--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,6 @@
 </head>
 
 <body>
-  <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
   <% unless action_name == "new" %>  <!-- We don't want to display the navbar on the login/registration page -->
@@ -33,8 +32,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
           <ul class="nav navbar-nav">
             <li><%= link_to 'HOME', :index %></li>
-            <!-- <li><%=link_to "ABOUT", '/about_path'%></li> -->
-            <li><a href="/about_path">ABOUT</a></li>
+            <li><%=link_to "ABOUT", '/about_path'%></li>
             <li><%=link_to "FAQS", '/faq_path' %></li>
             <li><a href="#">CONTACT</a></li>  <!-- The ="#" is just a null value. It will take the user back to the same page they're on -->
             <li><%=link_to "LOGOUT", :logout %></li>
