--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,9 +7,9 @@
         <h1 class="title">PAX NATIONATICA</h1>
         <h3 class="historic">Nations Rising and Falling Every Day</h3>
         <h3 class="main">Pax</h3>
-        <h4><strong>Pax</strong> is latin for Peace, but often times you'll see it used to describe a different term: hegemony.</h4>
+        <h4><strong>Pax</strong> is latin for <strong>peace</strong>, but usually you'll see it used in another way: to describe a period of hegemony.</h4>
         <h4><strong>Nationatica</strong> is bastardized latin to mean <strong>nation</strong>, i.e a group of people who see themselves as a cohesive and coherent unit.</h4>
-        <h4>But what's the twist? Well a lot of things can be considered a "nation". So why limit ourselves.</h4>
+        <h4>So that's what this site is about, when each nation at it's Pax, it's moment of glory, it's golden age. But what's the twist? Well a lot of things can be considered a "nation". So why limit ourselves.</h4>
         <!-- <h4>
             Virtually every nation of people on eath has seen at least one Pax in it's history.
             A country considered a failed state today probably has at least one period of regional dominance with many
