Cleaning up and adding content before deployement

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,2 +1,20 @@
-<h2 class="title"><u>About Pax Nationatica</u></h2>
-<h3></h3>
+<h3 class="title"><u>About Pax Nationatica</u></h3>
+
+<div class="roundcorners">
+     <h3 class="main">What You'll Find Here</h3>
+     <h4>A list of times in political history when every nation of people that ever existed was at
+       the height of its power. A decription of how that nation rose to the extent that it did, how
+       things eventually fell apart, and finally the legacy that if left behind.
+     </h4>
+     <br>
+     <h3 class="main">What You <i>Won't</i> Find Here</h3>
+     <h4>Empires whose existence were entirely dependent on the survival on one person
+       (that’s another site). Discussions over whether the founders of the Kingdom X were truly members
+       of Nation Y. Racism or other offensive comments. Empires or countries in which genocide was a
+       major aspect of their being. I await your angry emails.</h4>
+     <br>
+     <h4>Enjoy the site! Feel free to suggest new nations to add via the comments or through email at paxnationatica@gmail.com.</h4>
+</div>
+<br>
+<br>
+<br>
