--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,8 @@
             <li><%= link_to 'HOME', :index %></li>
             <li><%=link_to "ABOUT", '/about_path'%></li>
             <li><%=link_to "FAQS", '/faq_path' %></li>
-            <li><a href="#">CONTACT</a></li>  <!-- The ="#" is just a null value. It will take the user back to the same page they're on -->
+            <li><%=link_to "CONTACT", '/contact_path' %></li>
+            <!-- <li><a href="#">CONTACT</a></li>  <!-- The ="#" is just a null value. It will take the user back to the same page they're on --> -->
             <li><%=link_to "LOGOUT", :logout %></li>
           </ul>
         </div>
