--- a/app/views/application/faq.html.erb
+++ b/app/views/application/faq.html.erb
@@ -1,7 +1,7 @@
 <h2 class="title"><u>Frequently Asked Questions</u></h2>
 <div class="roundcorners">
      <h3 class="main">What’s the Criteria for a Nation’s “Pax”</h3>
-     <h4>Pax doesn’t really mean peace in the sense we’re used to. The term wouldn’t apply to a small prosperous nation that couldn't project its influence. Conversely, it wouldn’t be correct to call any stretch
+     <h4>Pax doesn’t really mean peace in the sense we’re used to. The term wouldn’t apply to a small prosperous nation that existed in isolation from the outside world. Nor wouldn it be correct to call any stretch
        of the Third Reich a Pax Germania. A nation’s pax means a time at which its regional political, economic, and/or military dominance was so complete that its discontinued existence was unthinkable and its people
        could freely expect to live without the sufferings of war. That is what this site will use to define the term, though everyone is free to interpret pax in their own way.
      </h4>
@@ -16,7 +16,7 @@
        imperialistic phase in its history, and to have some fun at the same time. Imperialism can take many forms: militaristic, cultural,
        economic, even athletic. And it's to our credit that most nations on earth are slowly rejecting
        imperialism and in favor of the more beneficial approach of cooperating with other nations to achieve what in the past would
-       have been gained from conquering a rival or intimidating a neighbor. That is what this site is trying to glorify.
+       have been gained from conquering a rival or intimidating a neighbor. So no, glorifying imperialism is definitely not what Pax Nationatica is about.
         </h4>
      <h3 class="main">So Are Paxes <i>Good</i>?</h3>
      <h4>It’s a great question and one I hope that people ask themselves. In most cases, a nation achieving a Pax results in the suffering of others, or at least is a large contributing factor to systematic oppression. After all, for a nation to become an empire it almost always must be at the expense of others. Some rulers and leaders over history have found ways to increase the power of their nation (and themselves) while minimizing the cost to the people of the nations around them, however this seems to be the minority of the cases. And on the other hand, periods of hegemonic induced peace have provided the world with some of the most important technological, artistic, and cultural advances humanity has ever seen. So are Paxes “good”? And if not, is your opinion based on what nation <i>you</i> happen to belong to? These seemingly academic questions have a strange way of worming themselves into modern day conflicts and political issues.
