Minor text changes

--- a/app/views/application/faq.html.erb
+++ b/app/views/application/faq.html.erb
@@ -15,11 +15,11 @@
      <h4>The goal here is to point out that every nation on earth has gone through at least one
        imperialistic phase in its history, and to have some fun at the same time. Imperialism can take many forms: militaristic, cultural,
        economic, even athletic. And it's to our credit that most nations on earth are slowly rejecting
-       imperialism and in favor of the more beneficial approach of cooperating with other nations to achieve what in the past would
-       have been gained from conquering a rival or intimidating a neighbor. So no, glorifying imperialism is definitely not what Pax Nationatica is about.
+       imperialism in favor of cooperating with other nations to get the same benefits.
+       So no, glorifying imperialism is definitely not what Pax Nationatica is about.
         </h4>
      <h3 class="main">So Are Paxes <i>Good</i>?</h3>
-     <h4>It’s a great question and one I hope that people ask themselves. In most cases, a nation achieving a Pax results in the suffering of others, or at least is a large contributing factor to systematic oppression. After all, for a nation to become an empire it almost always must be at the expense of others. Some rulers and leaders over history have found ways to increase the power of their nation (and themselves) while minimizing the cost to the people of the nations around them, however this seems to be the minority of the cases. And on the other hand, periods of hegemonic induced peace have provided the world with some of the most important technological, artistic, and cultural advances humanity has ever seen. So are Paxes “good”? And if not, is your opinion based on what nation <i>you</i> happen to belong to? These seemingly academic questions have a strange way of worming themselves into modern day conflicts and political issues.
+     <h4>It’s a great question and one I hope that people ask themselves. Usually when a nation achieving a Pax it results in the suffering of others, or at least oppression. After all, the expansion of an empire usually has to be at the expense of others. Some rulers and leaders over history have found ways to increase the power of their nation (and themselves) while minimizing the cost to the people of the nations around them, however that's the minority of the cases. And on the other hand, periods of hegemonic induced peace have provided the world with some of the most important technological, artistic, and cultural advances humanity has ever seen. So are Paxes “good”? And if not, is your opinion based on what nation <i>you</i> happen to belong to? These seemingly academic questions have a strange way of worming themselves into modern day conflicts and political issues.
      </h4>
 </div>
 <br>
